# new-relic-playground

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  newrelic.ini  pyproject.toml
.claude/: settings.json
.claude/commands/: commit.md
app/: config.py  main.py
app/routers/: apm.py  custom.py  custom_events.py  errors.py  health.py  logs.py  tracing.py
decisions/: 0001-use-uv-for-package-management.md  TEMPLATE.md
docs/: architecture.drawio
rules/: architecture-diagram.md  architecture.md  coding-standards.md  development-process.md
scripts/: smoke_test.sh
specs/: 00-overview.md  01-app-structure.md  02-docker.md  03-newrelic-agent-setup.md  04-apm-basic.md  05-custom-instrumentation.md  06-distributed-tracing.md  07-error-tracking.md  08-logs-in-context.md  09-custom-events-metrics.md  10-verification-checklist.md  11-architecture-diagram.md
tests/: conftest.py  test_health.py
